[gd_scene load_steps=3 format=3 uid="uid://c45jbio666tv6"]

[ext_resource type="Script" path="res://menus/Menu.gd" id="1_jd47m"]

[sub_resource type="Theme" id="Theme_037op"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jd47m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -60.5
offset_right = 172.0
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_037op")

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
text = "Start"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
